| Bug #6129 | Stored procedure won't display @@sql_mode value | ||
|---|---|---|---|
| Submitted: | 16 Oct 2004 14:13 | Modified: | 13 Apr 2005 14:29 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.2-alpha-debug | OS: | Linux (SuSE 8.2) |
| Assigned to: | Per-Erik Martin | CPU Architecture: | Any |
[16 Oct 2004 14:13]
Peter Gulutzan
[13 Apr 2005 14:29]
Per-Erik Martin
This was fixed when the sql_mode field in the mysql.proc table was brought up-to-date with the actual sql_mode definition. However, an old installation might need to update the table according to the mysql_fix_privilege_tables script (or reinstall the system database). A test case will be added though.
[13 Apr 2005 14:29]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/23966
